--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"webpack",
+    "start":"webpack serve --open"
   },
   "repository": {
     "type": "git",
