--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "start": "webpack serve --open"
   },
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/ram1117/todolist-application#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.4.0",
+    "jest-environment-jsdom": "^29.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
@@ -29,5 +32,6 @@
   },
   "dependencies": {
     "long-press-event": "^2.4.4"
-  }
+  },
+  "jest":{"testEnvironment": "jsdom"}
 }
