--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/ram1117/todolist-application#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
+    "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.4.0",
     "jest-environment-jsdom": "^29.4.0",
@@ -33,5 +37,7 @@
   "dependencies": {
     "long-press-event": "^2.4.4"
   },
-  "jest":{"testEnvironment": "jsdom"}
+  "jest": {
+    "testEnvironment": "jsdom"
+  }
 }
